@@ -1,3 +1,8 @@
+2008-04-17  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-hkp-source.c: Fix importing keys from hkp keyservers.
+    Patch from Mackenzie Morgan.  Fixes bug #528150
+
 2008-04-06  Stef Walter  <stef@memberwebs.com>
 
     * configure.in: Bump version number
